--- a/shop.html
+++ b/shop.html
@@ -22,7 +22,7 @@
         header {
             background: #FFFFFF;
             border-bottom: 1px solid #E2E8F0;
-            padding: 1.5rem 2rem;
+            padding: 12px 16px;
             position: sticky;
             top: 0;
             z-index: 100;
@@ -34,48 +34,95 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
-            gap: 1rem;
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
+            font-size: 1.3rem;
+            font-weight: 800;
             color: #2B7DE9;
-            letter-spacing: 0.5px;
+            letter-spacing: 1px;
         }
 
         .tagline {
-            font-size: 0.75rem;
-            color: #64748B;
-            font-weight: 400;
-            letter-spacing: 0.3px;
-            margin-top: 0.2rem;
+            font-size: 0.65rem;
+            color: #94A3B8;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
         }
 
         nav {
             display: flex;
-            gap: 2rem;
+            gap: 1.5rem;
+            align-items: center;
         }
 
         nav a {
-            color: #1E293B;
+            color: #475569;
             text-decoration: none;
-            font-size: 0.95rem;
+            font-size: 0.85rem;
             font-weight: 500;
             transition: color 0.2s;
         }
 
-        nav a:hover {
+        nav a:hover, nav a.active {
+            color: #2B7DE9;
+        }
+
+        .nav-dropdown {
+            position: relative;
+        }
+
+        .nav-dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: -8px;
+            background: #fff;
+            border: 1px solid #E2E8F0;
+            border-radius: 8px;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+            padding: 8px 0;
+            min-width: 200px;
+            z-index: 200;
+            margin-top: 8px;
+        }
+
+        .nav-dropdown:hover .nav-dropdown-menu,
+        .nav-dropdown.open .nav-dropdown-menu {
+            display: block;
+        }
+
+        .nav-dropdown-menu a {
+            display: block;
+            padding: 8px 16px;
+            font-size: 0.8rem;
+            color: #475569;
+        }
+
+        .nav-dropdown-menu a:hover {
+            background: #F8FAFC;
             color: #2B7DE9;
         }
 
         /* Hero Banner */
         .hero {
-            background: linear-gradient(135deg, #FFFFFF 0%, #EFF6FF 100%);
-            padding: 3rem 2rem;
+            background: linear-gradient(135deg, #1E3A8A 0%, #2563EB 50%, #3B82F6 100%);
+            padding: 2.5rem 1.5rem 2rem;
             text-align: center;
-            border-bottom: 1px solid #E2E8F0;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -20%;
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(255,255,255,0.08) 0%, transparent 70%);
+            border-radius: 50%;
         }
 
         .hero-content {
@@ -84,57 +131,93 @@
         }
 
         .hero h1 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: #0A1628;
-            margin-bottom: 1rem;
+            font-size: 1.8rem;
+            font-weight: 800;
+            color: #FFFFFF;
+            margin-bottom: 0.5rem;
+            position: relative;
+            z-index: 1;
         }
 
         .hero p {
-            font-size: 1.1rem;
-            color: #475569;
-            margin-bottom: 1.5rem;
+            font-size: 0.9rem;
+            color: rgba(255,255,255,0.7);
+            margin-bottom: 1.25rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero-stats {
+            display: flex;
+            justify-content: center;
+            gap: 8px;
+            flex-wrap: wrap;
+            margin-bottom: 1.25rem;
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero-stat {
+            background: rgba(255,255,255,0.1);
+            border: 1px solid rgba(255,255,255,0.15);
+            border-radius: 20px;
+            padding: 6px 14px;
+            font-size: 0.75rem;
+            color: rgba(255,255,255,0.85);
+            backdrop-filter: blur(4px);
+        }
+
+        .hero-stat strong {
+            color: #fff;
+            font-weight: 700;
         }
 
         .cta-button {
             display: inline-block;
-            background: #2B7DE9;
-            color: #FFFFFF;
-            padding: 0.875rem 2rem;
+            background: #FFFFFF;
+            color: #1E3A8A;
+            padding: 0.75rem 2rem;
             border-radius: 6px;
             text-decoration: none;
-            font-weight: 600;
-            font-size: 1rem;
+            font-weight: 700;
+            font-size: 0.9rem;
             transition: transform 0.2s, box-shadow 0.2s;
+            position: relative;
+            z-index: 1;
         }
 
         .cta-button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(43, 125, 233, 0.3);
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
         }
 
         /* Trust Bar */
         .trust-bar {
-            background: #F8FAFC;
-            padding: 1.25rem 2rem;
-            border-bottom: 1px solid #E2E8F0;
+            background: #0A1628;
+            padding: 10px 16px;
+            border-bottom: none;
         }
 
         .trust-content {
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
-            gap: 1.5rem;
+            gap: 0;
         }
 
         .trust-item {
-            font-size: 0.9rem;
+            font-size: 0.7rem;
             font-weight: 600;
-            color: #1E293B;
+            color: rgba(255,255,255,0.8);
             text-align: center;
+            letter-spacing: 0.3px;
+            padding: 0 12px;
+        }
+
+        .trust-item + .trust-item {
+            border-left: 1px solid rgba(255,255,255,0.15);
         }
 
         /* Main Content */
@@ -151,20 +234,26 @@
 
         .filter-pills {
             display: flex;
-            flex-wrap: wrap;
-            gap: 0.75rem;
+            gap: 6px;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+            padding-bottom: 8px;
         }
 
+        .filter-pills::-webkit-scrollbar { height: 0; }
+
         .filter-pill {
-            padding: 0.5rem 1rem;
+            padding: 6px 14px;
             border-radius: 20px;
-            border: 1px solid #E2E8F0;
+            border: 1.5px solid #E2E8F0;
             background: #FFFFFF;
-            font-size: 0.875rem;
-            font-weight: 500;
-            color: #475569;
+            font-size: 0.75rem;
+            font-weight: 600;
+            color: #64748B;
             cursor: pointer;
-            transition: all 0.2s;
+            transition: all 0.15s;
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .filter-pill:hover {
@@ -410,29 +499,18 @@
 
         /* Responsive */
         @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 1.75rem;
-            }
-
-            .hero p {
-                font-size: 1rem;
-            }
-
+            .hero h1 { font-size: 1.5rem; }
+            .hero p { font-size: 0.85rem; }
+            .hero { padding: 2rem 1rem 1.5rem; }
             .product-grid {
-                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-                gap: 1rem;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 8px;
             }
-
-            .trust-content {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            nav {
-                width: 100%;
-                justify-content: space-between;
-                gap: 1rem;
-            }
+            .product-card { padding: 12px; }
+            .product-name { font-size: 0.95rem; }
+            .product-description { font-size: 0.78rem; }
+            nav a.desktop-only { display: none; }
+            .trust-item { font-size: 0.6rem; padding: 0 8px; }
         }
     </style>
 </head>
@@ -445,10 +523,24 @@
                 <div class="tagline">Research-Grade Compounds</div>
             </div>
             <nav>
-                <a href="#shop">Shop</a>
-                <a href="#categories">Categories</a>
-                <a href="https://peptideresourcecenter.com" target="_blank">About</a>
-                <a href="mailto:contact@peptideresourcecenter.com">Contact</a>
+                <a href="#shop" class="active">Shop</a>
+                <span class="nav-dropdown">
+                    <a href="#categories" onclick="event.preventDefault();this.parentElement.classList.toggle('open')">Categories ▾</a>
+                    <div class="nav-dropdown-menu">
+                        <a href="#" onclick="filterCat('GLP Receptor Agonists');return false">GLP Receptor Agonists</a>
+                        <a href="#" onclick="filterCat('Tissue Repair');return false">Tissue Repair</a>
+                        <a href="#" onclick="filterCat('Growth Hormone Secretagogues');return false">Growth Hormone Secretagogues</a>
+                        <a href="#" onclick="filterCat('Metabolic');return false">Metabolic</a>
+                        <a href="#" onclick="filterCat('Antioxidants');return false">Antioxidants</a>
+                        <a href="#" onclick="filterCat('Neuropeptides');return false">Neuropeptides</a>
+                        <a href="#" onclick="filterCat('Longevity');return false">Longevity</a>
+                        <a href="#" onclick="filterCat('Melanocortin');return false">Melanocortin</a>
+                        <a href="#" onclick="filterCat('Cosmetic');return false">Cosmetic</a>
+                        <a href="#" onclick="filterCat('Advanced');return false">Advanced</a>
+                    </div>
+                </span>
+                <a href="https://peptideresourcecenter.com" target="_blank" class="desktop-only">Resources</a>
+                <a href="mailto:contact@peptideresourcecenter.com" class="desktop-only">Contact</a>
             </nav>
         </div>
     </header>
@@ -457,7 +549,12 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Research-Grade Peptides</h1>
-            <p>Direct sourcing. Rigorous testing. Fast shipping.</p>
+            <p>Direct sourcing · Rigorous testing · Fast shipping</p>
+            <div class="hero-stats">
+                <span class="hero-stat"><strong>44+</strong> Products</span>
+                <span class="hero-stat"><strong>10</strong> Categories</span>
+                <span class="hero-stat"><strong>≥98%</strong> Purity</span>
+            </div>
             <a href="#shop" class="cta-button">Shop Now</a>
         </div>
     </section>
@@ -930,6 +1027,26 @@
                 currentCategory = this.getAttribute('data-category');
                 renderProducts(currentCategory);
             });
+        });
+
+        // Dropdown nav filter
+        function filterCat(name) {
+            var catMap = {'GLP Receptor Agonists':'glp','Tissue Repair':'tissue','Growth Hormone Secretagogues':'gh','Metabolic':'metabolic','Antioxidants':'antioxidants','Neuropeptides':'neuropeptides','Longevity':'longevity','Melanocortin':'melanocortin','Cosmetic':'cosmetic','Advanced':'advanced'};
+            var cat = catMap[name] || 'all';
+            filterButtons.forEach(function(b) { b.classList.remove('active'); if(b.getAttribute('data-category')===cat) b.classList.add('active'); });
+            currentCategory = cat;
+            renderProducts(cat);
+            var el = document.querySelector('.filter-section');
+            if(el) el.scrollIntoView({behavior:'smooth'});
+            // close dropdown
+            var dd = document.querySelector('.nav-dropdown');
+            if(dd) dd.classList.remove('open');
+        }
+
+        // Close dropdown when clicking elsewhere
+        document.addEventListener('click', function(e) {
+            var dd = document.querySelector('.nav-dropdown');
+            if(dd && !dd.contains(e.target)) dd.classList.remove('open');
         });
 
         // Initial render
