--- a/shop.html
+++ b/shop.html
@@ -1297,8 +1297,7 @@
         <div class="trust-content">
             <div class="trust-item">Third-Party Tested</div>
             <div class="trust-item">Ships Next Day</div>
-            <div class="trust-item">Free Recon Kit Included</div>
-            <div class="trust-item">Free Shipping $150+</div>
+            <div class="trust-item">≥98% Purity</div>
         </div>
     </section>
 
