--- a/shop.html
+++ b/shop.html
@@ -661,18 +661,13 @@
         .product-name {
             font-size: 0.85rem;
             font-weight: 700;
-            color: #0A1628;
+            color: #2B7DE9;
             margin-bottom: 2px;
             line-height: 1.3;
         }
 
-        .product-name-link {
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .product-name-link:hover .product-name {
-            color: #2B7DE9;
+        .product-card:hover .product-name {
+            text-decoration: underline;
         }
 
         .product-description {
